fix images collapsing

--- a/src/D8Events.css
+++ b/src/D8Events.css
@@ -174,6 +174,7 @@
   position:absolute;
   top:0;
   height:100%;
+  width: 100%;
 }
 .eventItemCard .d8EventTitle a {
     font-size: 1.1rem;
